--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -495,6 +495,8 @@
       "name": "Ime",
       "surname": "Priimek",
       "specialization": "Specializacija",
+      "position": "Delovno mesto",
+      "role": "Vloga",
       "mail": "Mail",
       "phone": "Telefon",
       "close": "Zapri",
