small localization fix

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -194,7 +194,7 @@
     "filesHeader": "Files",
     "files": {
       "sortBy": "Sort by",
-      "addFile": "New file",
+      "addFile": "Add file",
       "fileName": "File name",
       "fileType": "File type",
       "fileCreatedAt": "Date",
