--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -188,7 +188,7 @@
     "filesHeader": "Datoteke",
     "files": {
       "sortBy": "Razvrsti po",
-      "addFile": "Nova datoteka",
+      "addFile": "Dodaj datoteko",
       "fileName": "Ime datoteke",
       "fileType": "Vrsta datoteke",
       "fileCreatedAt": "Ustvarjeno"
