Add translations for draft and issued

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -327,6 +327,8 @@
     }
   },
   "invoice": {
+    "draft": "Draft",
+    "issued": "Issued",
     "invoiceHeader": "Invoice",
     "saved": "Invoice saved",
     "notSaved": "Something is wrong, contact admin",
