--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -319,6 +319,8 @@
     }
   },
   "invoice": {
+    "draft": "Osnutek",
+    "issued": "Izdala",
     "invoiceHeader": "Račun",
     "saved": "Račun shranjen",
     "notSaved": "Napaka, kontaktirajte administratorja",
