Invoice Page finished

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -328,6 +328,9 @@
   },
   "invoice": {
     "draft": "Draft",
+    "paid": "Paid",
+    "unpaid": "Unpaid",
+    "partialyPaid": "Partialy paid",
     "issued": "Issued",
     "invoiceHeader": "Invoice",
     "saved": "Invoice saved",
