small localization adjustment

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -207,6 +207,7 @@
       "servicesSummary": "Services Summary"
     },
     "invoicesColumn": {
+      "type": "Type",
       "no": "Number",
       "date": "Date",
       "issuedBy": "Issued by",
