--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -200,6 +200,7 @@
       "servicesSummary": "Povzetek storitev"
     },
     "invoicesColumn": {
+      "type": "Tip",
       "no": "Številka",
       "date": "Datum",
       "issuedBy": "Izdal",
