--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -202,6 +202,9 @@
     },
     "invoicesTab": "Invoices",
     "invoices": {
+      "filters": {
+        "invoice_type": "Invoice type"
+      },
       "invoicesHeader": "Invoices",
       "addInvoice": "New invoice",
       "servicesSummary": "Services Summary"
