add field "payment status" to invoice table

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -215,7 +215,8 @@
       "date": "Date",
       "issuedBy": "Issued by",
       "amount": "Amount",
-      "status": "Status"
+      "status": "Status",
+      "paymentStatus": "Payment status"
     },
     "servicesSummaryColumn": {
       "serviceTitle": "Service",
