upd invoices in patient page

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -216,6 +216,7 @@
       "issuedBy": "Issued by",
       "amount": "Amount",
       "status": "Status",
+      "verificationStatus": "Verification status",
       "paymentStatus": "Payment status"
     },
     "servicesSummaryColumn": {
