--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -107,6 +107,7 @@
   },
   "calendarEvent": {
     "start": "Start",
+    "end": "End",
     "duration": "Duration",
     "note": "Note",
     "changeColor": "Change Color",
