rearranged buttons in EPR

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -145,9 +145,8 @@
       "email": "Email",
       "address": "Address",
       "addressUnknown": "Unknown",
-      "addAppointment": "New appointment",
+      "add": "Add",
       "addInvoice": "New invoice",
-      "addAssignment": "New assignment",
       "deletePatient": "Delete patient",
       "personalDoctors": "Personal doctors",
       "personalDentist": "Personal dentist",
