--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -144,9 +144,8 @@
       "email": "Email",
       "address": "Naslov",
       "addressUnknown": "Neznano",
-      "addAppointment": "Nov termin",
+      "add": "Dodaj",
       "addInvoice": "Nov Račun",
-      "addAssignment": "Nova naloga",
       "deletePatient": "Izbriši pacienta",
       "personalDoctors": "Osebni zdravniki",
       "personalDentist": "Osebni zobozdravnik",
