fixed labels bug in calendar

--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -112,7 +112,7 @@
   },
   "calendarEvent": {
     "start": "Začetek",
-    "duration": "Trajanje",
+    "end": "Konec",
     "note": "Opombe",
     "changeColor": "Spremeni barvo",
     "labels": "Oznaka",
