--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -124,6 +124,10 @@
     "viewPatient": "View Patient",
     "changeDisplayColor": "Change Appointment Color",
     "appointmentCancelled": "Appointment Cancelled by the Patient",
+    "unknown": "Unknown",
+    "attended": "Attended",
+    "notAttended": "Not Attended",
+    "canceled": "Canceled",
     "patient": "Patient",
     "doctor": "Doctor",
     "location": "Location",
