swapped radio buttons for checkboxes for cancelation of appointment

--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -121,6 +121,10 @@
     "changeColor": "Spremeni barvo",
     "labels": "Oznaka",
     "viewPatient": "Ogled pacienta",
+    "unknown": "Neznano",
+    "attended": "Udeleženo",
+    "notAttended": "Neudeleženo",
+    "canceled": "Preklicano",
     "changeDisplayColor": "Spremeni barvo termina",
     "appointmentCancelled": "Pacient je odpovedal termin",
     "patient": "Pacient",
