--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -183,7 +183,7 @@
     },
     "personalInfoTab": "Osebni podatki",
     "personalInfo": {
-      "edit": "Uredi podatke",
+      "editBtn": "Uredi",
       "personalInformation": "Osebni podatki",
       "firstName": "Ime",
       "lastName": "Priimek",
